# serverless-qdrant

./: .gitignore  Cargo.toml  Dockerfile  QUICK_START_LAMBDA.md  build_lambda.sh  deadlock.sh  docker-compose.deadlock.yaml  docker-compose.yaml  package-lock.json  package.json  test_sed.sh
.github/workflows/: prefault-mmap-pages-windows-test.yaml
cdk/: package-lock.json  package.json
cdk/lib/: cdk-stack.ts  config.ts
cdk/lib/helpers/: lsLambda.ts
config/: config.yaml  production.yaml
docs/grpc/: docs.md
docs/redoc/master/: openapi.json
echo/: Cargo.toml  Dockerfile  docker-compose-gen.sh  docker-compose.yaml  query.sh  query.zsh  run.sh
echo/src/: main.rs
lib/api/: Cargo.toml
lib/api/src/grpc/: qdrant.rs  transport_channel_pool.rs
lib/collection/: Cargo.toml
lib/collection/src/: collection.rs  update_handler.rs
lib/collection/src/grouping/: aggregator.rs  group_by.rs  types.rs
lib/collection/src/operations/: conversions.rs  types.rs
lib/collection/src/shards/: forward_proxy_shard.rs  shard.rs  (+5 more)
lib/common/common/: Cargo.toml
lib/segment/: Cargo.toml
lib/segment/benches/: sparse_index_build.rs
lib/segment/src/: madvise.rs  segment.rs  types.rs
lib/storage/: Cargo.toml
lib/storage/src/: dispatcher.rs  types.rs
src/: consensus.rs  lib.rs  main.rs  schema_generator.rs  settings.rs  tracing.rs
src/actix/: mod.rs
src/actix/api/: service_api.rs
src/common/: collections.rs  helpers.rs  points.rs
src/tonic/: mod.rs
src/tonic/api/: collections_api.rs  points_api.rs  points_common.rs  raft_api.rs
tests/: prefault-mmap-pages.sh
(+34 files in other folders)
