[package]
name = "echo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.1", features = ["derive"] }
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
log = { version = "0.4", features = ["std"] }
thiserror = "1.0"
tokio = { version = "~1.25", features = ["full"] }
tonic = { version = "0.8.3", features = ["gzip"] }
tonic-rpc = { version = "0.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
